Getting files in .gitignore untracked

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="start">Start !</string>
     <string name="introduction"></string>
     <string name="question_index"/>
+    <string name="ad_unit_id">ca-app-pub-6855950830684583/4114842952</string>
 </resources>
